# tiffexplore

./: README.md  pyproject.toml  setup.py
tiffexplore/: __init__.py  tiffread.py
